@startuml
'https://plantuml.com/class-diagram
interface Item{
    getWeight
}


class Game{
    - int answer
    - Player currentPlayer
    - ScoreBoard scoreboard
    + void startGame()
    - void playGame()
}




abstract class Player{
    - int score
    + int getGuess()
    + void responseToGuess(int)
}

class HumanPlayer{
    - String name
    - GameHistory history
}

class ComputerPlayer{

}



class ScoreBoard{
    - ArrayList<Player> players
    + void addPlayer(Player)
    + void printTopTen()
    + Player findPlayer(String name)
}

class IO{
    - Scanner scanner
    + void sendMessage(String msg)
    + String promptString(String msg)
    + int promptInt(String msg)
}

class GraphicIO{}

class Main{
    + void main()
}

class Scanner{}

enum TextColor{
    - String code
    String getCode()
}

enum BGColor{
    - String code
    String getCode()
}



IO *-- Scanner
Game *-- IO

Main *-- Game
IO <|-- GraphicIO
Game *-- ScoreBoard

GraphicIO *-- TextColor
GraphicIO *-- BGColor

Player <|-- HumanPlayer
Player <|-- ComputerPlayer

@enduml